name:                api-exercise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GContaldi/api-exercise#readme
license:             BSD3
license-file:        LICENSE
author:              Gaetano Contaldi
maintainer:          gaetanocontaldi000@gmail.com
copyright:           2017 Gaetano Contaldi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable api-exercise
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
